--- a/Menu-3.html
+++ b/Menu-3.html
@@ -18,7 +18,7 @@
        
         <ul>
             <li class="active"><a href="Menu-3.html">Home</a></li>
-			<li><a href="About-us.html">About Sea Sheperd</a></li>
+			<li><a href="About-Us.html">About Sea Sheperd</a></li>
             <li><a href="#">Campaign</a>
                 <ul>
                     <li class="child"><a href="Operation1.html">Operation Jairo</a></li>
